--- a/flowershop/src/main/resources/application.properties
+++ b/flowershop/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore_database?useSSL=false&serverTimezone=UTC&useUnicode=true&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.username=[]
+spring.datasource.password=[]
 # keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=select 1
@@ -39,8 +39,8 @@ spring.servlet.multipart.enabled=true
 # ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=byunsta@gmail.com
-spring.mail.password=wjdghwnd90621
+spring.mail.username=[]
+spring.mail.password=[]
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -48,4 +48,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.sockeFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.sockeFactory.fallback=false
-support.email=byunsta@gmail.com
+support.email=[]
